# avhook

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  avhook.sln  avhook.sln.DotSettings
src/: CMakeLists.txt  main.cpp
src/DirectX/: CMakeLists.txt  DX9ColorFix.cpp  DX9ColorFix.h
src/Globals/: CMakeLists.txt  DirectX9.h  GSettings.cpp  GlobalVars.cpp  Interfaces.h
src/Hacks/: AimBot.cpp  AimBot.h  CMakeLists.txt  TriggerBot.cpp  TriggerBot.h  bhop.cpp  bhop.h  hack.cpp  hack.h
src/Menu/: CMakeLists.txt  COverlay.cpp  COverlay.h  IBaseDrawObject.h  Settings.cpp  Settings.h
src/RawData/: RAVhookLogo.h
src/RazerSDK/: CMakeLists.txt  CRazerExceptions.h  RzChromaSDK.h  RzChromaSDKTypes.h  RzErrors.h
src/SDK/: CBaseEntity.cpp  CBaseEntity.h  CMakeLists.txt  CUserCMD.cpp  ClientBase.cpp  ClientBase.h  Finder.cpp  IBaseInterface.cpp  IBaseInterface.h  IEngineTrace.cpp
src/Scripts/: vckg-auto-install.bat
src/Utils/: CMakeLists.txt  Marker.h  VMThook.cpp  Vec3.cpp  memory.cpp  memory.h  offsets.h  xorstr.h
src/Web/: CAVSoket.h  CAVhookServerApi.cpp  CAVhookServerApi.h  CMakeLists.txt  IWebObject.cpp  Socket.cpp  Socket.h  httplib.h
src/images/: console_icon.psd
src/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
test/: LICENSE  main.cpp  resource.h  test.rc  test.vcxproj  test.vcxproj.filters
test/DirctX/: CustomDirectX9Device.h  DX9ColorFix.cpp  DX9ColorFix.h
test/DirectX/: CustomDirectX9Device.cpp  DX9ColorFix.cpp  DX9ColorFix.h
test/Globals/: GlobalVars.cpp  GlobalVars.h  Interfaces.h  Settings.h
test/Hacks/: AimBot.cpp  AimBot.h  TriggerBot.cpp  TriggerBot.h  bhop.cpp  bhop.h  hack.cpp  hack.h
test/Menu/: COverlay.h  (+4 more)
(+182 files in other folders)
